# backend/src/controllers/oracleController.js
@@ -1,0 +1,18 @@
+//Import sol compiler and file system handler
+var base = require('../model/callback');
+
+module.exports = {
+
+		getOracleAddress : function(callback){
+			base.successCallback({Message : "Implementation is pending"},callback);	
+		} ,
+
+		getRentedCarsContracts : function(callback){
+			base.successCallback({Message : "Implementation is pending"},callback);	
+		} ,
+
+		updatePosition : function(car_contract_address , geohash_position ,callback){
+			base.successCallback({Message : "Implementation is pending"},callback);	
+		}
+
+}
