# backend/src/routes/renter.js
@@ -9,4 +9,26 @@ router.get('/getAllAvailableCars', function (request, response) {
 	});
 });
 
+router.get('/:address/getOwnerContractAsRenter', function (request, response) {
+	renter.getOwnerContractAsRenter(request.param.address,function(result){
+		response.json(result);
+	});
+});
+
+
+router.post('/:address/:ownercontractaddress/rentCar', function (request, response) {
+	renter.rentCar(request.param.address,request.param.ownercontractaddress,request.query.car_contract_address,function(result){
+		response.json(result);
+	});
+});
+
+router.post('/:address/:ownercontractaddress/returnCar', function (request, response) {
+	renter.returnCar(request.param.address,request.param.ownercontractaddress,request.query.car_contract_address,function(result){
+		response.json(result);
+	});
+});
+
+
+
+
 module.exports = router;
