# backend/src/routes/routes.js
@@ -4,7 +4,7 @@ var app = express();
 const accounts = require('./accounts');
 const owner = require('./owner');
 var renter = require('./renter');
-var cars = require('./cars');
+var oracle = require('./oracle');
 
 //Routes
 app.use('/account', accounts);
@@ -13,7 +13,7 @@ app.use('/owner', owner);
 
 app.use('/renter', renter);
 
-app.use ('/cars' , cars);
+app.use ('/oracle' , oracle);
 
 module.exports = app;
 
