# backend/src/swagger.json
@@ -13,7 +13,7 @@
    "basePath": "/api/v1",
    "tags": [
       {
-         "name": "account",
+         "name": "accounts",
          "description": "Everything about your account"
       },
       {
@@ -23,6 +23,10 @@
       {
          "name": "renter",
          "description": "Access to renter APIs"
+      },
+      {
+         "name": "oracle",
+         "description": "Access to oracle APIs"
       }
    ],
    "schemes": [
@@ -32,7 +36,7 @@
       "/account/": {
          "get": {
             "tags": [
-               "account"
+               "accounts"
             ],
             "summary": "Get All the accounts in blockchain",
             "description": "",
@@ -42,7 +46,13 @@
             ],
             "responses": {
                "200": {
-                  "description": "successful operation"
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "array",
+                     "items": {
+                        "$ref": "#/definitions/Address"
+                     }
+                  }
                }
             }
          }
@@ -50,7 +60,7 @@
       "/account/{address}": {
          "get": {
             "tags": [
-               "account"
+               "accounts"
             ],
             "summary": "Get associated address to the accounts in blockchain",
             "description": "",
@@ -75,60 +85,113 @@
             }
          }
       },
-      "/owner/{address}": {
+      "/oracle/": {
          "get": {
             "tags": [
-               "owner"
+               "oracle"
             ],
-            "summary": "Deploy Owener Contract",
+            "summary": "Get the oracle saved in the server",
             "description": "",
-            "operationId": "deployContract",
+            "operationId": "getOracle",
+            "produces": [
+               "application/json"
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "$ref": "#/definitions/Oracle"
+                  }
+               }
+            }
+         }
+      },
+      "/oracle/getRentedCarsContracts": {
+         "get": {
+            "tags": [
+               "oracle"
+            ],
+            "summary": "Get the addresses of the car contracts of all actively rented cars",
+            "description": "Get all actively rented cars, that have to be watched by the oracle",
+            "operationId": "getRentedCarsContracts",
+            "produces": [
+               "application/json"
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "array",
+                     "items": {
+                        "$ref": "#/definitions/CarContractInfo"
+                     }
+                  }
+               }
+            }
+         }
+      },
+      "/oracle/updatePosition": {
+         "put": {
+            "tags": [
+               "oracle"
+            ],
+            "summary": "Update position of a certain car in a car contract",
+            "description": "Update the position of a car in a given car contract",
+            "operationId": "updatePet",
             "produces": [
                "application/json"
             ],
             "parameters": [
                {
-                  "name": "address",
-                  "in": "path",
-                  "description": "address",
+                  "name": "car_contract_address",
+                  "in": "query",
+                  "description": "The address of the car contract",
                   "required": true,
-                  "type": "string",
-                  "format": "string"
+                  "type": "string"
+               },
+               {
+                  "name": "geohash_position",
+                  "in": "query",
+                  "description": "The geohashed position of the car",
+                  "required": true,
+                  "type": "string"
                }
             ],
             "responses": {
                "200": {
-                  "description": "successful operation"
+                  "description": "Successful operation"
+               },
+               "400": {
+                  "description": "Invalid ID supplied"
+               },
+               "404": {
+                  "description": "Pet not found"
+               },
+               "405": {
+                  "description": "Validation exception"
                }
             }
-         },
+         }
+      },
+      "/owner/{userAddress}/createOwnerContract": {
          "post": {
             "tags": [
                "owner"
             ],
-            "summary": "Add a New Car",
-            "description": "",
-            "operationId": "addNewCar",
+            "summary": "Deploy Owner Contract",
+            "description": "Create and deploy a contract in the blockchain",
+            "operationId": "createOwnerContract",
             "produces": [
                "application/json"
             ],
             "parameters": [
                {
-                  "name": "address",
+                  "name": "userAddress",
                   "in": "path",
-                  "description": "address",
+                  "description": "The user address in the blockchain",
                   "required": true,
                   "type": "string",
                   "format": "string"
-               },
-               {
-                  "in": "body",
-                  "name": "body",
-                  "description": "Add a New Car",
-                  "required": true,
-                  "schema": {
-                     "$ref": "#/components/schemas/addmewcar"
-                  }
                }
             ],
             "responses": {
@@ -136,7 +199,111 @@
                   "description": "successful operation"
                }
             }
-         },
+         }
+      },
+      "/owner/{userAddress}/createCarContract": {
+         "post": {
+            "tags": [
+               "owner"
+            ],
+            "summary": "Add new car by owner address",
+            "description": "",
+            "operationId": "createCarContract",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "in": "body",
+                  "name": "body",
+                  "description": "Pet object that needs to be added to the store",
+                  "required": true,
+                  "schema": {
+                     "$ref": "#/definitions/CarContractConstructor"
+                  }
+               },
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation"
+               }
+            }
+         }
+      },
+      "/owner/{userAddress}/getCarContracts": {
+         "get": {
+            "tags": [
+               "owner"
+            ],
+            "summary": "Get all car contracts of a given car owner",
+            "description": "Create and deploy a contract in the blockchain",
+            "operationId": "getCarContracts",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation"
+               }
+            }
+         }
+      },
+      "/owner/{userAddress}/withdrawMoney": {
+         "post": {
+            "tags": [
+               "owner"
+            ],
+            "summary": "Withdraw all money that were saved in the owner contract",
+            "description": "",
+            "operationId": "withdrawMoney",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "in": "body",
+                  "name": "body",
+                  "description": "Pet object that needs to be added to the store",
+                  "required": true,
+                  "schema": {
+                     "$ref": "#/definitions/CarContractConstructor"
+                  }
+               },
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation"
+               }
+            }
+         }
+      },
+      "/owner/{userAddress}/{caraddress}": {
          "delete": {
             "tags": [
                "owner"
@@ -149,7 +316,7 @@
             ],
             "parameters": [
                {
-                  "name": "address",
+                  "name": "userAddress",
                   "in": "path",
                   "description": "address",
                   "required": true,
@@ -157,38 +324,9 @@
                   "format": "string"
                },
                {
-                  "in": "body",
-                  "name": "body",
-                  "description": "Delete a  Car",
-                  "required": true,
-                  "schema": {
-                     "$ref": "#/components/schemas/deletecar"
-                  }
-               }
-            ],
-            "responses": {
-               "200": {
-                  "description": "successful operation"
-               }
-            }
-         }
-      },
-      "/owner/getcars/{address}": {
-         "get": {
-            "tags": [
-               "owner"
-            ],
-            "summary": "get all the cars of the owner",
-            "description": "",
-            "operationId": "getAllCars",
-            "produces": [
-               "application/json"
-            ],
-            "parameters": [
-               {
-                  "name": "address",
+                  "name": "caraddress",
                   "in": "path",
-                  "description": "address",
+                  "description": "car contract address",
                   "required": true,
                   "type": "string",
                   "format": "string"
@@ -201,36 +339,258 @@
             }
          }
       },
-      "/renter/": {}
-   },
-   "components": {
-      "schemas": {
-         "addmewcar": {
-            "title": "Adding a new car",
-            "type": "object",
-            "properties": {
-               "cargsm": {
-                  "type": "string",
-                  "description": "cargsm id"
+      "/renter/getAllAvailableCars": {
+         "get": {
+            "tags": [
+               "renter"
+            ],
+            "summary": "Get all cars available in the blockchain",
+            "description": "Goes through all owner contracts and gathers all owner contracts that have a available car in them. Return owner contracts and their car contracts.",
+            "operationId": "getAllAvailableCars",
+            "produces": [
+               "application/json"
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "array",
+                     "items": {
+                        "$ref": "#/definitions/OwnerAndHisAvailableCars"
+                     }
+                  }
                }
-            },
-            "required": [
-               "cargsm"
-            ]
-         },
-         "deletecar": {
-            "title": "delete a car",
-            "type": "object",
-            "properties": {
-               "caraddress": {
-                  "type": "string",
-                  "description": "Address of car"
-               }
-            },
-            "required": [
-               "caraddress"
-            ]
+            }
          }
+      },
+      "/renter/{userAddress}/getOwnerContractAsRenter": {
+         "get": {
+            "tags": [
+               "renter"
+            ],
+            "summary": "Get an owner contract in which a user with given address is a renter",
+            "description": "Returns owner contract in which the user with userAddress is in the array of renters",
+            "operationId": "getOwnerContractsOfRenter",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "string"
+                  }
+               }
+            }
+         }
+      },
+      "/renter/{userAddress}/{ownerContract}/rentCar": {
+         "post": {
+            "tags": [
+               "renter"
+            ],
+            "summary": "Rent car",
+            "description": "Rent a car",
+            "operationId": "rentCar",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               },
+               {
+                  "name": "ownerContract",
+                  "in": "path",
+                  "description": "The ower contract address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               },
+               {
+                  "name": "car_contract_address",
+                  "in": "query",
+                  "description": "The address of the car contract of the car that gets rented",
+                  "required": true,
+                  "type": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "$ref": "#/definitions/Address"
+                  }
+               }
+            }
+         }
+      },
+      "/renter/{userAddress}/{ownerContract}/returnCar": {
+         "post": {
+            "tags": [
+               "renter"
+            ],
+            "summary": "Return car",
+            "description": "Returns owner contracts in which the user with userAddress is a renter",
+            "operationId": "returnCar",
+            "produces": [
+               "application/json"
+            ],
+            "parameters": [
+               {
+                  "name": "userAddress",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               },
+               {
+                  "name": "ownerContract",
+                  "in": "path",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               },
+               {
+                  "name": "carContract",
+                  "in": "query",
+                  "description": "The user address in the blockchain",
+                  "required": true,
+                  "type": "string",
+                  "format": "string"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "successful operation",
+                  "schema": {
+                     "type": "array",
+                     "items": {
+                        "$ref": "#/definitions/Address"
+                     }
+                  }
+               }
+            }
+         }
+      }
+   },
+   "definitions": {
+      "Oracle": {
+         "type": "object",
+         "properties": {
+            "oracleAddress": {
+               "type": "string"
+            }
+         },
+         "xml": {
+            "name": "Oracle"
+         }
+      },
+      "CarContractInfo": {
+         "type": "object",
+         "properties": {
+            "carContractAddress": {
+               "type": "string",
+               "format": "hex-address"
+            },
+            "ownerAddress": {
+               "type": "string",
+               "format": "hex-address"
+            },
+            "penaltyValue": {
+               "type": "integer",
+               "format": "int32"
+            },
+            "leftGeofence": {
+               "type": "boolean"
+            },
+            "avialability": {
+               "type": "boolean"
+            },
+            "submittedMoney": {
+               "type": "integer",
+               "format": "int32"
+            },
+            "carGSMNum": {
+               "type": "string"
+            },
+            "geohashLastPostion": {
+               "type": "string"
+            },
+            "geofencePrefix": {
+               "type": "string"
+            },
+            "geofenceSuffix": {
+               "type": "array",
+               "items": {
+                  "type": "string"
+               }
+            }
+         },
+         "xml": {
+            "name": "Contract"
+         }
+      },
+      "CarContractConstructor": {
+         "type": "object",
+         "properties": {
+            "carGSMNum": {
+               "type": "string"
+            },
+            "penaltyValue": {
+               "type": "integer",
+               "format": "int32"
+            },
+            "position": {
+               "type": "string"
+            },
+            "geofencePrefix": {
+               "type": "string"
+            },
+            "geofenceSuffix": {
+               "type": "array",
+               "items": {
+                  "type": "string"
+               }
+            }
+         },
+         "xml": {
+            "name": "Contract"
+         }
+      },
+      "OwnerAndHisAvailableCars": {
+         "type": "object",
+         "properties": {
+            "ownerContract": {
+               "type": "string"
+            },
+            "availableCarContract": {
+               "type": "array",
+               "items": {
+                  "type": "string"
+               }
+            }
+         }
+      },
+      "Address": {
+         "type": "string"
       }
    }
 }
